testdata/Call.def/Call.prop_m/Call.prop_m.2.13-new.check
// exitCode: 1
target/testdata/Call.def/Call.prop_m.scala:3: error: not enough arguments for method apply: (i: Int): Char in class StringOps.
Unspecified value parameter i.
  prop()
      ^
1 error
